src/test/ui/span/regions-escape-loop-via-variable.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/regions-escape-loop-via-variable.rs:11:14
   |
LL |         p = &x;
   |              ^ borrowed value does not live long enough
LL |     }
   |     - `x` dropped here while still borrowed
LL |
LL | }
   | - borrowed value needs to live until here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
